[project]
name = "ucloud-comfyui"
description = "Run local and API LLMs with features including Gemini 2.0 image generation, DeepSeek R1, QwenVL 2.5, QWQ 32B, Ollama, LlamaCPP, LM Studio, KoboldCPP, TextGen, and Transformers. Connect via APIs to Anthropic, Groq, OpenAI, Google Gemini, Mistral, and xAI. Create your own character assistants with custom system prompts, presets, and much more."
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["requests", "pillow"]

[project.urls]
Repository = "https://github.com/ucloud/comfyui-plugin"

[tool.comfy]
PublisherId = "khalil-song"
DisplayName = "ComfyUl-UCloud"
Icon = "https://www-s.ucloud.cn/2025/07/4a29a785049191245cea58d2176157d2_1753185180124.jpg"
includes = []
