[project]
name = "comfyui-compshare"
description = "ComfyUI全能AI节点，无缝运行本地/API模型（含DeepSeek、Qwen等），直连compshare享极速图像视频生成体验，轻松创建角色助手，详情请下载使用。"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests", "pillow"]

[project.urls]
Repository = "https://github.com/ucloud/comfyui-plugin"

[tool.comfy]
PublisherId = "khalil-song"
DisplayName = "comfyui-compshare"
Icon = "https://www-s.ucloud.cn/2025/08/98b99f23726c8d35c71c5447ccf4e4bb_1755161511623.png"
includes = []
