[project]
name = "ucloud-comfyui"
description = "This is a custom node for ComfyUI that allows you to use the UCloud API directly in ComfyUI. UCloud is a high-performance AI computing platform providing powerful image generation models and industry-leading inference speeds. It offers a wide range of AI model options, including popular text-to-image and image editing models, ready to use without local GPU setup."
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["requests", "pillow"]

[project.urls]
Repository = "https://github.com/ucloud/comfyui-plugin"

[tool.comfy]
PublisherId = "khalil-song"
DisplayName = "ComfyUl-UCloud"
Icon = "https://www-s.ucloud.cn/2025/07/4a29a785049191245cea58d2176157d2_1753185180124.jpg"
includes = []
